# Game-Programming-Patterns

./: .gitignore  .gitmodules  README.md  example3.cpp
behavioral_pattern/: CMakeLists.txt  README.md
behavioral_pattern/include/: instruction.h  vm.h  wizard.h
behavioral_pattern/src/: main.cpp  vm.cpp  wizard.cpp
command_pattern/: CMakeLists.txt  README.md
command_pattern/include/: command.h  player.h
command_pattern/src/: command.cpp  main.cpp  player.cpp
example/: makefile
example/include/: allCommand.h  command.h  inputHandler.h
example/src/: allCommand.cpp  inputHandler.cpp  main.cpp
example2/: first.cpp  second.cpp  third.cpp
prototype_pattern/: CMakeLists.txt  README.md
prototype_pattern/include/: monster.h  spawner.h
prototype_pattern/src/: main.cpp  monster.cpp
state_pattern/: CMakeLists.txt  new.sh
state_pattern/include/: Audio.h  audioEvent.h  bullet.h  bulletState.h  disappearState.h  entity.h  flyingState.h  game.h  generateState.h  keyboard.h  observer.h  player.h  playerState.h  shootState.h  standState.h  subject.h  walk.h
state_pattern/include/player/: player.h  playerState.h
state_pattern/src/: Audio.cpp  bullet.cpp  bulletState.cpp  disappearState.cpp  entity.cpp  flyingState.cpp  game.cpp  generateState.cpp  keyboard.cpp  main.cpp  player.cpp  playerState.cpp  shootState.cpp  standState.cpp  subject.cpp  walk.cpp
state_pattern/src/bullet/: bullet.cpp  bulletState.cpp  flyingState.cpp  generateState.cpp
state_pattern/src/player/: player.cpp  playerState.cpp  shootState.cpp  standState.cpp  walk.cpp
